--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "classiebit/addchat-laravel-pro",
+    "name": "arkcode/addchat-laravel-pro",
     "version": "1.1",
     "description": "Live chat widget for Laravel that also includes multi-user chat, group permissions, customer support chat & more.",
     "keywords": [
@@ -8,25 +8,23 @@
         "laravel chat package",
         "vuejs"
     ],
-    "license": "Commercial",
-    "homepage": "https://classiebit.com/addchat-laravel-pro",
     "authors": [
         {
-            "name": "Classiebit",
-            "email": "info@classiebit.com"
+            "name": "arkcode",
+            "email": "therasoftware010@gmail.com"
         }
     ],
     "require": {
         "pusher/pusher-php-server": "*",
-        "illuminate/support": "~5.5|~6.0|~7.0|~8.0",
+        "illuminate/support": "~5.5|~6.0|~7.0|~8.0|~9.0|~10.0",
         "doctrine/dbal": "^2.5"
     },
     "require-dev": {
-        "laravel/framework": "~5.5|~6.0|~7.0|~8.0"
+        "laravel/framework": "~5.5|~6.0|~7.0|~8.0|~9.0|10.0"
     },
     "autoload": {
         "psr-4": {
-            "Classiebit\\Addchat\\": "src/"
+            "Arkcode\\Addchat\\": "src/"
         }
     },
     "minimum-stability": "stable",
@@ -34,7 +32,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Classiebit\\Addchat\\AddchatServiceProvider"
+                "Arkcode\\Addchat\\AddchatServiceProvider"
             ]
         }
     }
