--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "arkcode/addchat-laravel-pro",
+    "name": "arkcode/chat-laravel",
     "version": "1.1",
     "description": "Live chat widget for Laravel that also includes multi-user chat, group permissions, customer support chat & more.",
     "keywords": [
