--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "laravel chat package",
         "vuejs"
     ],
+    "keywords": ["log","logging"],
+    "homepage": "https://github.com/Sirajunnasihin/Chat-Laravel",
+    "license": "MIT",
     "authors": [
         {
             "name": "arkcode",
@@ -16,11 +19,11 @@
     ],
     "require": {
         "pusher/pusher-php-server": "*",
-        "illuminate/support": "~5.5|~6.0|~7.0|~8.0|~9.0|~10.0",
+        "illuminate/support": "~8.0|~9.0|~10.0",
         "doctrine/dbal": "^3.7"
     },
     "require-dev": {
-        "laravel/framework": "~5.5|~6.0|~7.0|~8.0|~9.0|10.0"
+        "laravel/framework": "~8.0|~9.0|10.0"
     },
     "autoload": {
         "psr-4": {
